--- a/index.html
+++ b/index.html
@@ -10,29 +10,20 @@
   </head>
   <body>
     <div class="container">
-      <div class="forms-wrapper">
-        <form action="#" class="signIn-form">
-          <a href="#" class="signup-btn">Sign Up</a>
-          <h2>Sign In</h2>
-          <div class="inputs_wrapper">
-            <input type="email" placeholder="Enter Your Email" required />
-            <input type="password" placeholder="Enter Your Password" />
-            <input type="submit" value="Sign In" />
-          </div>
-        </form>
-        <form action="#" class="signUp-form">
-          <a href="#" class="signin-btn">Sign In</a>
-          <h2>Sign Up</h2>
-          <div class="inputs_wrapper">
-            <input type="text" placeholder="Enter Your Name" />
-            <input type="email" placeholder="Enter Your Email" />
-            <input type="password" placeholder="Enter Your Password" />
-            <input type="password" placeholder="Enter Your Confrom Password" />
-            <input type="submit" value="Sign Up" />
-          </div>
-        </form>
+      <div class="grid-gallary">
+        <img class="img-1" src="./img/a1.jpg" alt="image">
+        <img class="img-2" src="./img/a2.jpg" alt="image">
+        <img class="img-3" src="./img/a3.jpg" alt="image">
+        <img class="img-7" src="./img/a4.jpg" alt="image">
+        <img class="img-5" src="./img/a5.jpg" alt="image">
+        <img class="img-6" src="./img/a6.jpg" alt="image">
+        <img class="img-7" src="./img/a7.jpg" alt="image">
+        <img class="img-8" src="./img/a8.jpg" alt="image">
+        <img class="img-9" src="./img/b1.jpg" alt="image">
+        <img class="img-10" src="./img/b2.jpg" alt="image">
+        <img class="img-11"src="./img/b3.jpg" alt="image">
+      </div>
       </div>
     </div>
-    <script src="main.js"></script>
   </body>
 </html>
